# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: hexlet-check.yml
brain_games/: cli.py  consts.py  engine  engine.py  utils.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calc.py.save  brain_calc.pyн  brain_even.py  brain_even.pyu  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  run_brain_calc.py  run_brain_even.py  run_brain_gcd.py  run_brain_prime.py  run_brain_progression.py  welcome.py
