[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["artem <artem_smirnov88@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.run_brain_games:main"
brain-even = "brain_games.scripts.run_brain_even:main"
brain-calc = "brain_games.scripts.run_brain_calc:main"
brain-gcd = "brain_games.scripts.run_brain_gcd:main"
brain-progression = "brain_games.run_scripts.brain_progression:main"
brain-prime = "brain_games.scripts.run_brain_prime:main"
